kubernetes/apps/argo-system/argo-cd/config/http-route.sops.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - argo.krapulax.dev
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
sops:
  age:
    - recipient: age1saea3t7l67lavg0ardepzys6egp50g82uvks98pk53xdlj57uf8sa2arcs
      enc: |
        -----BEGIN AGE ENCRYPTED FILE-----
        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6MmZrc3FvcVdNTExzaFRq
[...]
        o7Gokq5ZEKqcrF8AYGwKiytJ1VrbXkxbszfCK96JPwlslCXDNLC66Q==
        -----END AGE ENCRYPTED FILE-----
  lastmodified: "2026-03-13T22:54:35Z"
  mac: ENC[AES256_GCM,data:JR9aSdd8yhBdQr8k6aaD3gmEmB2FrvQ8fBUZa2gMa6s9l6wZdo6wf3EoBGMk2e3zF8TvsIeVeeJKpRJ6CNleQ/jIuK70p48nyam5qjhiIhTiZA3CWXINHKbFKV1oNiVGKRDHx89+gXdlPOn6+BM63yqRNX9O9f2x9yM++2uwdgM=,iv:WlRV+D+18Gnc/CJGj4HkoK7VxLgZhuOMEh850+D8FR8=,tag:dq6rf8kqAh3qyCakJFY1bQ==,type:str]
  encrypted_regex: ^(data|stringData)$
  mac_only_encrypted: true
  version: 3.12.1
