kubernetes/apps/argo-system/argo-cd/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
  namespace: argo-system
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - argo.krapulax.dev
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argo-system
          port: 80
